XXXXXXXX
========
- User and Group combos chandet to lists, improving user interface
- frmMain now update tables automatically.
- Bottle.py remove from project, you must use the bottle.py distribution

20130116
========
- Script added to make backups. It can be launched from console and from UI.
- Bug solved when sending mail without comment

20130114
========
- Documents are now generated in /tmp/didyoureadme
- Open documents and reports have been improved
- You can add several lines in document comment
- The title of the document is now mandatory


20130108
========
- First version, full functional.