@@ -1,9 +1,8 @@
-20121220 Correo suplantación de identidad en windows live, ver si faltan cabeceras
+020121220 Correo suplantación de identidad en windows live, ver si faltan cabeceras
 20121220 Bottle da erro 104, reiniciado remote machine , creo es proiteccion de descarga windows
 20121220 Dirección ip del intergaz y luego nombre  para enlace 
 20121220 Meter localzone en settings
 20121308 Hacer un informe de que documentos no ha leído
-20130116 Contador de conexiones htttp
-20130118 Hacer un seguro de errores de correo. Más de 30 errores se para el envio y se avisa..
-20130118 Si en correo se mete mmmarí@gmail.com con acento falla
-20130118 Hacer logs de errores en sendmail y en update data( ahora los borro y los pierdo)
+20130116 Contador de conexiones http
+20130118 Si en correo se mete mmmarí@gmail.com con acento falla, validar el campo a caracteres permitidos
+20130205 Los acentos pierden el utf-8 en los correos.
